<resources>
    <string name="app_name">Lista_compra</string>
    <string name="voltar">Voltar</string>

    <!--Texto para Tela de login-->
    <string name="acesseContaTxt">Acesse sua conta</string>
    <string name="crieContaTxt">Crie Conta</string>"
    <string name="acessar">Acessar</string>

    <!--Texto para Tela de cadastro-->
    <string name="criarContaTxt">Criar Conta</string>"
    <string name="nomeCompleto">Nome Completo</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="senhaConfirmar">Confirme a senha</string>

</resources>